# mojo-bm25s

./: .gitignore  CLAUDE.md  PHASE2.md  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  backends.py  bench_bmw.py  datasets.py  microbench_anytime.py  microbench_csc.py  microbench_hashmap.py  microbench_simd_scatter.py  microbench_topk.py  results.md  run.py
scripts/: build_wheel.py
src/mojo_bm25s/: __init__.py  anytime.py  bmw.py  cli.py  csc.mojo  index_builder.py  io.py  lib.mojo  patch.py  retrieve.mojo  retrieve_anytime.mojo  retrieve_bmw.mojo  retriever.py  scoring.mojo  stem.py  tokenize.py  topk.mojo  vocab.py
tests/: conftest.py  test_bmw.py  test_cli.py  test_csc.py  test_hardening.py  test_hashmap_scratch.py  test_impact_ordered.py  test_index_builder.py  test_interop.py  test_patch.py  test_persistence.py  test_retrieve_batch.py  test_retrieve_batch_parallel.py  test_retriever.py  test_scoring.py  test_simd_scatter.py  test_smoke.py  test_stemmer.py  test_tokenizer.py  test_topk.py  test_touched_rows_reset.py  test_vocab.py  test_wheel_distribution.py
tests/parity/: conftest.py  test_retriever_standalone.py  test_vs_bm25s.py  test_vs_rank_bm25.py
