[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojo_bm25s"
version = "0.0.0"
description = "Python shim for Mojo BM25 kernels"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7", "bm25s>=0.2", "rank-bm25>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]
