[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojo_bm25s"
version = "0.0.0"
description = "Python shim for Mojo BM25 kernels"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7", "bm25s>=0.2", "rank-bm25>=0.2"]

[project.scripts]
mojo-bm25s = "mojo_bm25s.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# The compiled Mojo kernel (built by `scripts/build_wheel.py`) gets
# staged at src/mojo_bm25s/_kernel.so before `python -m build` runs;
# package-data picks it up and packs it next to __init__.py in the wheel.
# Without this, setuptools' default `find_packages` ignores arbitrary
# non-Python files and the wheel installs cleanly but `_load_kernel()`
# raises ImportError on first import.
[tool.setuptools.package-data]
mojo_bm25s = ["_kernel.so"]
